# OGRRE_data_cleaning

./: .coverage  .gitignore  LICENSE  README.md  debug.ipynb  fields_with_errors.json  fields_without_cleaning_functions.json  fields_without_schemas.json  setup.cfg
.github/: checks.yml
.github/workflows/: checks.yml
examples/: format-data.ipynb
procesor_schemas/: Extractor Processors.json  IL_InspectorCasingCement_B.json  IL_Ver_A_PluggingReport.json  IL_Ver_A_WellCompletion.json  IL_Ver_B_PluggingReport.json  IL_Ver_B_Well_Completion.json  IL_Ver_C_PluggingReport.json  IL_WellCompletion_F.json  IL_WellCompletion_G.json  Illinois_Well_Drilling.json  excel_to_json.py
processor_schemas/: CALGEM Well Summary Schema.xlsx  IL_InspectorCasingCement_B.json  IL_Ver_A_PluggingReport.json  IL_Ver_A_WellCompletion.json  IL_Ver_B_PluggingReport.json  IL_Ver_B_Well_Completion.json  IL_Ver_C_PluggingReport.json  IL_WellCompletion_F.json  IL_WellCompletion_G.json  ISGS Well Completion Schema.xlsx  Illinois_Well_Drilling.json  excel_to_json.py
processor_schemas/calgem_extractors/: 00Extractor Processors.json  CA_Ver_A_WellSummary.json
processor_schemas/isgs_extractors/: 00Extractor Processors.json  IL_Ver_A_WellCompletion.json  IL_Ver_B_PluggingReport.json  IL_Ver_C_PluggingReport.json  IL_WellCompletion_F.json  IL_WellCompletion_G.json
scripts/: calculate_md5.py  run_tests.py  test_install.py
src/ogrre_data_cleaning/: clean.py
src/ogrre_data_cleaning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_clean.py
(+30 files in other folders)
