[metadata]
name = ogrre_data_cleaning
version = 0.1.0
author = Benjamin Houghton
author_email = Benjamin.Houghton@netl.doe.com
description = A package for cleaning OGRRE data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CATALOG-Historic-Records/OGRRE_data_cleaning
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    torch>=2.0.0
    numpy>=1.24.0
    requests
    tqdm
    pandas>=2.0.0

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest>=7.0
    pytest-cov>=4.0

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = -v --cov=ogrre_data_cleaning 